[WTR] Crash in WebGeolocationManagerProxy::~WebGeolocationManagerProxy() when running several tests https://bugs.webkit.org/show_bug.cgi?id=173315

Reviewed by Darin Adler.

This has started to happen after r218165, but I don't think it's a regression, but that r218165 revealed the bug
somehow in WTR. The problem is that GeolocationProviderMock keeps a pointer to the WKGeolocationManagerRef
returned by WKContextGetGeolocationManager. But in TestController::generatePageConfiguration() the context is
freed before the GeolocationProviderMock. When the GeolocationProviderMock is then destroyed, it calls
WKGeolocationManagerSetProvider(m_geolocationManager, 0); but the WKGeolocationManagerRef has already been
destroyed. GeolocationProviderMock should keep a reference to the WKContext to ensure the
WKGeolocationManagerRef is not destroyed.

* WebKitTestRunner/GeolocationProviderMock.cpp:
(WTR::GeolocationProviderMock::GeolocationProviderMock):
* WebKitTestRunner/GeolocationProviderMock.h:

Canonical link: https://commits.webkit.org/190177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218183 268f45cc-cd09-0410-ab3c-d52691b4dbfc